# KeyLogicExpansion

./: CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
old/lib/: actionDecoder.cpp  actionDecoder.h  config.cpp  config.h  gui.cpp  gui.h  hook.cpp  keyDecoder.cpp  utils.cpp  utils.h  var.cpp
src/: config.cpp  hook.cpp  plugin.cpp
src/H/: PCH.h  config.h  hook.h  utils.h
src/lib/: PCH.h  actionDecoder.cpp  actionDecoder.h  compatibility.cpp  compatibility.h  config.cpp  config.h  custom.cpp  custom.h  gui.cpp  gui.h  hook.cpp  hook.h  keyCodeMap.cpp  keyCodeMap.h  keyDecoder.cpp  keyDecoder.h  keyInputQueue.cpp  keyInputQueue.h  keymap.cpp  keymap.h  module.cpp  module.h  stances.cpp  stances.h  style.cpp  style.h  utils.cpp  utils.h  var.cpp  var.h
